prevent gap under sidebar

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,7 +8,6 @@ html, body {
   float: left;
   padding-top: 30px;
   width: 60%;
-  height: 100%;
 }
 
 .focused {
